feat: 添加内置模板